places should be done - moving on to posts

--- a/app/views/layouts/places/new.html.erb
+++ b/app/views/layouts/places/new.html.erb
@@ -2,7 +2,7 @@
 
 <%= form_with model: @places do |form| %>
     <p>
-    <%= form.text_field "name", " Name" %>
+    <%= form.text_field "name", "Location Name" %>
     <%= form.submit %>
     </p>
 <% end %>
