committing before testing

--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,1 +1,25 @@
 <h1>Create a New Post!</h1>
+
+<%= form_with model: @post do |form| %>
+
+<p>
+    <%= form.label "Title" %>
+    <%= form.text_field "title" %>
+</p>
+
+<p>
+    <%= form.label "Description" %>
+    <%= form.text_field "description" %>
+</p>
+
+<p>
+    <%= form.label "Trip Date" %>
+    <%= form.date "posted_on" %>
+</p>'
+
+
+    <%= form.hidden_field "place_id" %>
+  </p>
+  <%= form.submit %>
+  
+<% end %>
