--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -5,12 +5,12 @@
 <% for posts in @place.posts %>
     <li>
         <h3><%= @posts.title %></h3>
-        <h4><%= @posts.description%></h4>
         <h5><%= @posts.posted_on %></h5>
+        <h4><%= @posts.description%></h4>        
     </li>
 <% end %>
 </ul>
 
-<a href = "/posts/new?place_id=<%= @place.id %>"> Create a New Post for This Place!</a>
+<a href = "/posts/new?place_id=<%= @place.id %>">Create a New Post for This Place!</a>
 <br><br>
-<a href = "/posts">Back to All Posts</a>
+<a href = "/places">Back to Places</a>
