Screwed up my server somehow - restarting gitpod

--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -14,12 +14,12 @@
 
 <p>
     <%= form.label "Trip Date" %>
-    <%= form.date "posted_on" %>
-</p>'
+    <%= form.date_field "posted_on" %>
+</p>
 
 
-    <%= form.hidden_field "place_id" %>
-  </p>
-  <%= form.submit %>
-  
+    <%= form.number_field "place_id" %>
+ 
+    <%= form.submit %>
+
 <% end %>
