fixed it but I keep getting a nil error so restart

--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -3,22 +3,22 @@
 <%= form_with model: @post do |form| %>
 
 <p>
-    <%= form.label "Title" %>
+    <%= form.label "title", "What Did You Do?" %>
     <%= form.text_field "title" %>
 </p>
 
 <p>
-    <%= form.label "Description" %>
+    <%= form.label "description", "Tell Me More About It!" %>
     <%= form.text_field "description" %>
 </p>
 
 <p>
-    <%= form.label "Trip Date" %>
+    <%= form.label "posted_on", "When Did You Do This?" %>
     <%= form.date_field "posted_on" %>
 </p>
 
 
-    <%= form.number_field "place_id" %>
+    <%= form.hidden_field "place_id" %>
  
     <%= form.submit %>
 
